--- a/assets/css/harrystyles.css
+++ b/assets/css/harrystyles.css
@@ -1,7 +1,9 @@
+/* GENERAL CSS ------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 /* Styles the paragraph text on each page */
 p {
-    color: #2e2e2e;
-    font-family: 'Futura Std', sans-serif;
+  color: #2e2e2e;
+  font-family: 'Futura Std', sans-serif;
 }
 
 /* Styles the headings on each page */
@@ -10,7 +12,7 @@ h2 {
   font-family: 'Futura Std', sans-serif;
 }
 
-/* Styles the sub headings on relevant pages */
+/* Styles the sub headings on each page */
 h4 {
   color: #2e2e2e;
   font-family: 'Futura Std', sans-serif;
@@ -18,48 +20,15 @@ h4 {
   padding-bottom: 10px;
 }
 
-
-/* Styles the body on each page, kinda pointless */
+/* Styles the body on each page, kinda pointless considering .vsc-initialized below, here as backup??? */
 body {
-    background-color: #F6E280;
+  background-color: #F6E280;
 }
 
-/* does the same thing as the body but better, full page width */
+/* does the same thing as above... BUT BETTER! :D + sets full page width */
 .vsc-initialized {
   background-color: #2e2e2e;
   max-width: 100vw;
-}
-
-/* Styles the navigation bar */
-nav {
-  background-color: #F6E280;
-  font-family: 'Futura Std', sans-serif;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  text-align: center;
-  border-radius: 5px;   
-}
-
-.logonav {
-display: inline;
-max-width: 100px;
-border-radius: 0px;
-margin-right: 20px;
-}
-
-/* colours the navigation buttons */
-.btn {
-  color: #2e2e2e;
-  background-color: #EEA383;
-  border-color: #EEA383;
-}
-
-/* colours the navigation buttons on hover action */
-.btn-primary:hover {
-  color: #2e2e2e;
-  background-color: #EF6F76;
-  border-color: #EF6F76;
 }
 
 /* Styles the container class on each page */
@@ -77,74 +46,285 @@ img {
   /* border: 10px solid #F6E280; */
   border-radius: 15px;
   max-width: 500px;
-
 }
+
+
+
+
+/* NAVIGATION -------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* Styles the navigation bar */
+nav {
+  background-color: #2e2e2e;
+  font-family: 'Futura Std', sans-serif;
+  padding-top: 10px;
+  padding-bottom: 10px; 
+  margin-bottom: 10px;
+  text-align: center;
+  border-radius: 5px;   
+}
+
+/* handles the logo in the navigation */
+.logonav {
+  display: inline;
+  max-width: 100px;
+  border-radius: 0px;
+  margin-right: 20px;
+}
+
+/* colours the navigation buttons */
+.btn {
+  color: #2e2e2e;
+  background-color: white;
+  border-color: white;
+  margin: 5px;
+}
+
+/* colours the navigation buttons on hover action */
+.btn-primary:hover {
+  color: #2e2e2e;
+  background-color: #EF6F76;
+  border-color: #EF6F76;
+}
+
+
+
+
+/*HOMEPAGE ----------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /* Styles Homepage Logo image  */
 .logohome {
   margin: auto;
   display: block;
-  /* border: 10px solid #F6E280; */
   border-radius: 100vh;
   max-width: 40vw;
   max-height: 40vw;
 }
 
-/* adjusts the "border width" of each list item */
-.building {
-  max-width: 400px;
+/* handles layout for text on homepage */
+.hometext {
+  max-width: 1fr;
+  max-width: fit-content;
 }
+
+ /* handles layout for text and logo on homepage */
+.homelayout {
+  display: grid;
+  grid-template-columns: 1fr 1fr ;
+  grid-template-rows: 1fr ;
+  place-items: center;
+}
+
+
+
+
+/*ABOUT PAGE --------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /* Hides the weird thing at the bottom of the about page */
 pre {
   display: none;
 }
 
+/* About page layout */
+.page {
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr ;
+  place-items: center;
+}
+
+/* sets full width of text within div */
+.page p {
+  max-width: 100vh;
+}
+
+
+
+
+/*BUILDINGS + EVENTS PAGES LAYOUT AND STYLE -------------------------------------------------------------------------------------------------------------------------------*/
+
+/* adjusts the "border width" of each list item */
+.building {
+  max-width: 400px;
+}
 
 /* sets the max width of the containing div to 100% of the screen */
-  .building {
-    max-width: 100vw;
+.building {
+  max-width: 100vw;
+}
 
-  }
-
-  /* uses FANCY GRID TECHNOLOGY to align the list group into a grid, defines grid */
-  .list-group {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-
-  }
+/* uses FANCY GRID TECHNOLOGY to align the list group into a grid, defines grid */
+.list-group {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 
 /* handles styling of individual list items */
-  .list-group-item {
-    background-color:#F6E280;
-    margin: 10px;
-
-    /* haven't figured out yet why below doesn't work */
-    border: #2e2e2e;
-    border: 10px;
-    border-color: #EEA383;
-
-  }
+.list-group-item {
+  background-color: #EF6F76;
+  margin: 10px;
+  /*year text colour*/
+  color: #2e2e2e;
+}
 
 /* Styles list items on each page */
 li {
   color: #2e2e2e;
   font-family: 'Futura Std', sans-serif;
   border-radius: 10px;
-  }
+}
 
-/* handles layout for text on homepage */
- .hometext {
-  max-width: 1fr;
-  max-width: fit-content;
- }
 
- /* handles layout for text and logo on homepage */
- .homelayout {
+
+
+/* PARTNERS PAGE -----------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* partners page grid layout */
+.content.partners {
   display: grid;
-  grid-template-columns: 1fr 1fr ;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+/* visually separates partners when viewing the page */
+.content.partners h4 {
+  margin-top: 5vh;
+}
+
+/* visually separates partners when viewing the page */
+.content.partners h2 {
+  color: #2e2e2e;
+}
+
+/* layout for partners page */
+.content.partners div {
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr ;
   place-items: center;
- }
+} 
 
+/* helps with aligning paragraph text and links to centre of page on partners page */
+.content.partners p,a {
+  max-width: 100vh;
+}
+ 
+/* image layout and responsiveness */
+.wp-block-image img {
+  display: block;
+  max-width: 50vw;
+  max-height: 50vh;
+}
+
+
+
+
+/* EVENTS PAGE NAVIGATION --------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* styles responsive navigation (year filter) on events page */
+.eventsnav {
+  background-color: #2e2e2e;
+  max-width: 35vw;
+}
+
+/* colours the navigation buttons on the events page */
+.eventsnav .btn {
+  color: #2e2e2e;
+  background-color: white;
+  border-color: white;
+}
+
+/* colours the events page navigation buttons on hover action */
+.eventsnav .btn-primary:hover {
+  color: #2e2e2e;
+  background-color: #EF6F76;
+  border-color: #EF6F76;
+}
+
+/* display block for images */
+figure {
+  display: block;
+}
+
+
+
+
+/*LINKS PAGE ---------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* links page grid layout */
+.about {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+/* visually separates links when viewing the page */
+.about h4 {
+  margin-top: 5vh;
+}
+
+/* visually separates links when viewing the page */
+.about h2 {
+  color: #2e2e2e;
+}
+
+/* layout for links page */
+.about div {
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr ;
+  place-items: center;
+}  
+
+/* helps with aligning paragraph text and links to centre of page on links page */
+.about p {
+  max-width: 60vw;
+}
+
+
+
+
+/*VIDEOS PAGE --------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* links page grid layout */
+.content.videos {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+/* visually separates links when viewing the page */
+.content.videos div h2 {
+  /* margin-top: 5vh; */
+}
+
+/* visually separates links when viewing the page */
+.content.videos div h4 {
+  margin-top: 5vh;
+}
+
+/* visually separates links when viewing the page */
+.about h2 {
+  color: #2e2e2e;
+}
+
+/* layout for videos page */
+.content.videos div {
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr ;
+  place-items: center;
+}  
+
+/* helps with aligning paragraph text to centre of page on videos page */
+.content.videos p {
+  max-width: 60vw;
+}
+
+
+/* FIN :D -------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
